@@ -1,3 +1,7 @@
+2003-01-09  Akihiro Mizutani <mizutani@net-chef.net>
+
+	* bgp_routemap.c: Add match extcommunity command.
+
 2002-10-23  Kunihiro Ishiguro  <kunihiro@ipinfusion.com>
 
 	* bgp_aspath.c (aspath_init): Extend hash size from default to
